--- a/Backend/package.json
+++ b/Backend/package.json
@@ -15,7 +15,8 @@
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
-    "mongoose": "^7.5.4"
+    "mongoose": "^7.5.4",
+    "resend": "^2.0.0"
   },
   "devDependencies": {
     "morgan": "^1.10.0",
