--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -15,9 +15,9 @@
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
-    "react-router-dom": "^6.21.0"
-    "react-hot-toast": "^2.4.1",
-    "react-select": "^5.8.0"
+    "react-router-dom": "^6.21.0",
+    "react-select": "^5.8.0",
+    "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
