--- a/Backend/.envTemplate
+++ b/Backend/.envTemplate
@@ -3,5 +3,9 @@ DB_PORT=27017
 DATABASE=myPetShop
 DB_USER=
 DB_PASSWORD=
+MAIL_USERNAME=
+MAIL_PASSWORD=
+OAUTH_CLIENTID=
+OAUTH_CLIENT_SECRET=
+OAUTH_REFRESH_TOKEN=
 API_PORT=4000
-RESEND_KEY=
