--- a/Backend/package.json
+++ b/Backend/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "mongoose": "^7.5.4",
+    "nodemailer": "^6.9.7",
     "resend": "^2.0.0"
   },
   "devDependencies": {
