--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -10,11 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@smastrom/react-rating": "^1.4.0",
     "axios": "^1.6.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^4.12.0",
+    "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.21.0",
     "react-select": "^5.8.0",
     "tailwind-scrollbar-hide": "^1.1.7"
