--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -22,6 +22,8 @@ jobs:
 
       - name: Instalando dependencias
         run: npm install
+        working-directory: Frontend
 
       - name: ejecucion de pruebas
         run: npm run dev
+        working-directory: Frontend
