--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -21,7 +21,7 @@ jobs:
         run: cd Frontend
 
       - name: Instalando dependencias
-        run: npm install
+        run: npm install --no-audit --no-fund --no-optional
         working-directory: Frontend
 
       - name: Lint
@@ -30,4 +30,8 @@ jobs:
 
       - name: ejecucion de pruebas
         run: npm run dev
+        working-directory: Frontend
+
+      - name: Build
+        run: npm run build
         working-directory: Frontend
