--- a/Backend/package.json
+++ b/Backend/package.json
@@ -6,7 +6,9 @@
   "type": "module",
   "scripts": {
     "start": "node src/index.js",
-    "dev": "nodemon src/index.js"
+    "dev": "nodemon src/index.js",
+    "build": "echo 'No hay tareas de construcción necesarias para una aplicación en JavaScript'",
+    "eslint": "eslint src"
   },
   "author": "Daniel Dubon",
   "license": "ISC",
@@ -20,6 +22,12 @@
     "resend": "^2.0.0"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
+    "eslint": "^8.56.0",
+    "eslint-config-airbnb-base": "^15.0.0",
+    "eslint-config-standard": "^17.1.0",
+    "eslint-plugin-import": "^2.29.1",
+    "eslint-plugin-standard": "^5.0.0",
     "morgan": "^1.10.0",
     "nodemon": "^3.0.1"
   }
