--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -10,9 +10,7 @@ jobs:
     runs-on: ubuntu-22.04
     steps:
       - name: Cancelar Builds Redundantes
-        uses: styfle/cancel-workflow-action
-        with:
-          access_token: ${{ github.token }}
+        uses: styfle/cancel-workflow-action@0.9.1
 
   install-dependencies:
     runs-on: ubuntu-22.04
