--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -29,9 +29,26 @@ jobs:
     needs: install-dependencies
     runs-on: ubuntu-22.04
     steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+    
+      - name: Instalando dependencias
+        run: npm install
+        working-directory: Frontend
+
       - name: Lint Frontend
         run: npm run eslint
         working-directory: Frontend
+
+      - name: Instalando dependencias
+        run: npm install
+        working-directory: Backend
+
       - name: Lint Backend
         run: npm run eslint
         working-directory: Backend
@@ -40,10 +57,26 @@ jobs:
     needs: install-dependencies
     runs-on: ubuntu-22.04
     steps:
-      - name: Build Backend
-        run: npm run build
-        working-directory: Backend
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+      
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+    
+      - name: Instalando dependencias
+        run: npm install
+        working-directory: Frontend
 
       - name: Build Frontend
         run: npm run build
         working-directory: Frontend
+
+      - name: Instalando dependencias
+        run: npm install
+        working-directory: Backend
+
+      - name: Build Backend
+        run: npm run build
+        working-directory: Backend
