--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -29,6 +29,7 @@
     "autoprefixer": "^10.4.16",
     "cypress": "^13.6.1",
     "eslint": "^8.56.0",
+    "eslint-plugin-cypress": "^2.15.1",
     "eslint-plugin-react": "^7.33.2",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
