--- a/Frontend/package.json
+++ b/Frontend/package.json
@@ -20,6 +20,7 @@
     "react-rating-stars-component": "^2.2.0",
     "react-router-dom": "^6.21.0",
     "react-select": "^5.8.0",
+    "sweetalert2": "^11.10.1",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
   "devDependencies": {
