--- a/Frontend/cypress/.eslintrc.json
+++ b/Frontend/cypress/.eslintrc.json
@@ -1,5 +1,6 @@
 {
-    "extends": [
-      "plugin:cypress/recommended"
-    ]
+  "extends": ["plugin:cypress/recommended"],
+  "rules": {
+    "cypress/no-unnecessary-waiting": "warn"
+  }
 }
