--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -62,16 +62,14 @@ jobs:
           OAUTH_REFRESH_TOKEN: ${{secrets.OAUTH_REFRESH_TOKEN}}
 
       - name: Levantando Frontend
-        run: npm run dev &
+        run: npm run build
         working-directory: Frontend
 
       - name: Pruebas E2E
         uses: cypress-io/github-action@v6
         with:
-          build: npm run build
-          start: npm start
           command: npm run teste2e
-          working-directory: Frontend
+          working-directory: dist
       
       - name: Terminar servidor
         run:  kill -9 $(lsof -t -i:${{secrets.API_PORT}})
