--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -26,7 +26,7 @@ jobs:
         working-directory: Backend  
 
   verificacion:
-    needs: pruebas
+    needs: compilacion
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -82,7 +82,7 @@ jobs:
         working-directory: Backend
 
   pruebas:
-    needs: compilacion
+    needs: implementacion
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
