--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -125,6 +125,7 @@ jobs:
         uses: cypress-io/github-action@v6
         with:
           command: npm run teste2e
+          wait-on: 'http://localhost:5173'
           working-directory: Frontend
       
       - name: Terminar servidor
