--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -118,20 +118,13 @@ jobs:
           OAUTH_REFRESH_TOKEN: ${{secrets.OAUTH_REFRESH_TOKEN}}
 
       - name: Levantando Frontend
-        run: npm run dev &
+        run: npm run build
         working-directory: Frontend
 
       - name: Pruebas E2E
         uses: cypress-io/github-action@v6
         with:
           command: npm run teste2e
+          start: npm run start-test
           wait-on: 'http://localhost:5173'
           working-directory: Frontend
-      
-      - name: Terminar servidor
-        run:  kill -9 $(lsof -t -i:${{secrets.API_PORT}})
-        working-directory: Backend 
-
-      - name: Terminar Frontend
-        run:  kill -9 $(lsof -t -i:5173)
-        working-directory: Frontend     
