--- a/.github/workflows/pipeline.yml
+++ b/.github/workflows/pipeline.yml
@@ -25,8 +25,56 @@ jobs:
         run: npm ci
         working-directory: Backend  
 
-  verificacion:
+  pruebas:
     needs: compilacion
+    runs-on: ubuntu-22.04
+    steps:
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+
+      - uses: actions/setup-node@v4
+        with:
+          node-version: 20
+      
+      - name: Instalando dependencias
+        run: npm ci
+        working-directory: Frontend
+      
+      - name: Instalando dependencias
+        run: npm ci
+        working-directory: Backend
+
+      - name: Levantando servidor
+        run: npm run dev &
+        working-directory: Backend
+        env:
+          API_PORT: ${{secrets.API_PORT}}
+          DATABASE: ${{secrets.DATABASE}}
+          DB_HOST: ${{secrets.DB_HOST}}
+          DB_PASSWORD: ${{secrets.DB_PASSWORD}}
+          DB_PORT: ${{secrets.DB_PORT}}
+          DB_USER: ${{secrets.DB_USER}}
+          MAIL_PASSWORD: ${{secrets.MAIL_PASSWORD}}
+          MAIL_USERNAME: ${{secrets.MAIL_USERNAME}}
+          OAUTH_CLIENTID: ${{secrets.OAUTH_CLIENTID}}
+          OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
+          OAUTH_REFRESH_TOKEN: ${{secrets.OAUTH_REFRESH_TOKEN}}
+
+      - name: Levantando Frontend
+        run: npm run build
+        working-directory: Frontend
+
+      - name: Pruebas E2E
+        uses: cypress-io/github-action@v6
+        with:
+          command: npm run teste2e
+          start: npm run start-test
+          wait-on: 'http://localhost:5173'
+          working-directory: Frontend
+
+  verificacion:
+    needs: pruebas
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v4
@@ -80,51 +128,3 @@ jobs:
       - name: Build Backend
         run: npm run build
         working-directory: Backend
-
-  pruebas:
-    needs: implementacion
-    runs-on: ubuntu-22.04
-    steps:
-      - uses: actions/checkout@v4
-        with:
-          fetch-depth: 0
-
-      - uses: actions/setup-node@v4
-        with:
-          node-version: 20
-      
-      - name: Instalando dependencias
-        run: npm ci
-        working-directory: Frontend
-      
-      - name: Instalando dependencias
-        run: npm ci
-        working-directory: Backend
-
-      - name: Levantando servidor
-        run: npm run dev &
-        working-directory: Backend
-        env:
-          API_PORT: ${{secrets.API_PORT}}
-          DATABASE: ${{secrets.DATABASE}}
-          DB_HOST: ${{secrets.DB_HOST}}
-          DB_PASSWORD: ${{secrets.DB_PASSWORD}}
-          DB_PORT: ${{secrets.DB_PORT}}
-          DB_USER: ${{secrets.DB_USER}}
-          MAIL_PASSWORD: ${{secrets.MAIL_PASSWORD}}
-          MAIL_USERNAME: ${{secrets.MAIL_USERNAME}}
-          OAUTH_CLIENTID: ${{secrets.OAUTH_CLIENTID}}
-          OAUTH_CLIENT_SECRET: ${{secrets.OAUTH_CLIENT_SECRET}}
-          OAUTH_REFRESH_TOKEN: ${{secrets.OAUTH_REFRESH_TOKEN}}
-
-      - name: Levantando Frontend
-        run: npm run build
-        working-directory: Frontend
-
-      - name: Pruebas E2E
-        uses: cypress-io/github-action@v6
-        with:
-          command: npm run teste2e
-          start: npm run start-test
-          wait-on: 'http://localhost:5173'
-          working-directory: Frontend
